fix link underline overflow and some inline issues

--- a/app/assets/stylesheets/pages/merge_requests.scss
+++ b/app/assets/stylesheets/pages/merge_requests.scss
@@ -174,6 +174,17 @@ $status-icon-margin: $gl-btn-padding;
     }
   }
 
+  .mini-pipeline-graph-dropdown-menu .mini-pipeline-graph-dropdown-item {
+    display: flex;
+    align-items: center;
+
+    .ci-status-text,
+    .ci-status-icon {
+      top: 0;
+      margin-right: 10px;
+    }
+  }
+
   .normal {
     line-height: 28px;
   }
@@ -208,10 +219,6 @@ $status-icon-margin: $gl-btn-padding;
         background-color: $gray-light;
       }
     }
-  }
-
-  .js-deployment-link {
-    display: inline-block;
   }
 
   .mr-widget-help {
